--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 /* Los estilos se aplican a todo el documento */
 body {
-    
+    background-image: linear-gradient(135deg, rgba(14, 13, 13, 0.3), rgba(4, 61, 80, 0.7)),
+              url('../assets/background.avif');
+              
+}
+
+.social-icon{
+    width: 32px;
 }
