--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
 /* Los estilos se aplican a todo el documento */
 body {
     background-image: linear-gradient(135deg, rgba(14, 13, 13, 0.3), rgba(4, 61, 80, 0.7)),
-              url('../assets/background.avif');
-              
+        url('../assets/background.avif');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+
+
 }
 
-.social-icon{
+
+.social-icon {
     width: 32px;
+}
+
+.sobre-mi {
+    max-width: 800px;
+    border-style: solid;
+    border-radius: 20px;
+    border-width: 1px;
+    margin: auto;
+    padding: 20px;
+    background-image: linear-gradient(135deg, rgba(14, 13, 13, 0.3), rgba(4, 61, 80, 0.7))
+}
+
+.sobre-mi h2 {
+    text-align: center;
+}
+
+.sobre-mi img {
+    border-radius: 50px;
+    width: 150px;
+
+
 }
