--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,12 @@
 
 /* Los estilos se aplican a todo el documento */
 body {
-    background-image: linear-gradient(135deg, rgba(14, 13, 13, 0.3), rgba(4, 61, 80, 0.7)),
+    background-image: linear-gradient(135deg, #03415999, #A6877620),
         url('../assets/background.avif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    color: #fff;
+    color: #D9C4B8;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
@@ -17,28 +17,64 @@ body {
 
 }
 
+header {
+    margin: 32px auto ;
+    text-align: 800px;
+}
+header {
+    
+    text-align: center;
+    font-weight: 500;
+    line-height: 16px;
+}
 
-.social-icon {
+
+
+.social-icons {
     width: 32px;
 }
 
-.sobre-mi {
+.box {
     max-width: 800px;
     border-style: solid;
     border-radius: 20px;
     border-width: 1px;
+    border-color: #D9C4B8;
     margin: auto;
-    padding: 20px;
-    background-image: linear-gradient(135deg, rgba(14, 13, 13, 0.3), rgba(4, 61, 80, 0.7))
+    margin-top: 24px;
+    padding: 0 16px 16px 32px;
+    background-image: linear-gradient(135deg,  #21262699, #A6877633)
 }
 
-.sobre-mi h2 {
+.box h2 {
     text-align: center;
+    font-weight: 500;
 }
 
-.sobre-mi img {
-    border-radius: 50px;
+.box img {
+    border-radius: 50%;
     width: 150px;
 
+
+}
+.profile {
+     text-align: center;
+}
+.social-icons{
+    list-style: none;
+}
+
+.social-icons li {
+    display: inline-block;
+    margin: 0 10px;
+}
+.social-icons img {
+    width: 48px;
+}
+footer{
+    margin: 32px auto ;
+    max-width: 800px;
+    font-size: 10pt;
+    text-align: center;
 
 }
